# game_kind_knight

./: README.md  REARME.md  Readme.md  gui.py  main.py  other_views.py  pyproject.toml  settings.py  ui_message.py  units.py  utils.py
data/: level_1.tmx
data/levels/: Gradient (z -6).tsx  PlayerFishy(96x80).tsx  Spritesheet_tileset.tsx  background2.tsx  background3.tsx  background4a.tsx  background4b.tsx  castle_tileset_part2.tsx  level_1.tmx  level_2.tmx  mainlev_build.tsx  props1.tsx  props2.tsx  sky.tsx
data/textures/levels/cave/: background1.tsx
gui/: game_ui.py  gui_buttons.py  main_menu_gui.py
levels/: lvl_1.py
