[tool.poetry]
name = "kind-knight"
version = "0.1.0"
description = "the game based on python arcade."
authors = ["Maxim <108695003+SaixFix@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
